# docker-g4-app

./: CMakeLists.txt  Dockerfile  README.md  main.cc
include/: ActionInit.hh  DetConstruction.hh  PrimaryGenAction.hh  SteppingAction.hh
src/: ActionInit.cc  DetConstruction.cc  PrimaryGenAction.cc  SteppingAction.cc
